# android_device_oneplus_bacon

./: .Android.mk.swp  Android.bp  Android.mk  AndroidBoard.mk  AndroidProducts.mk  BoardConfig.mk  README.md  bacon.mk  bacon.x509.pem  board-info.txt  cm.dependencies  cm.mk  config.fs  device-proprietary-files.txt  extract-files.sh  full_bacon.mk  lineage.dependencies  lineage.mk  lineage_bacon.mk  manifest.xml  mkbootimg.mk  odm_manifest_jdi.xml  odm_manifest_sharp.xml  project.config  proprietary-files-qc.txt  proprietary-files.txt  setup-makefiles.sh  system.prop  vendorsetup.sh
audio/: audio_effects.conf  audio_effects.xml  audio_platform_info.xml  audio_policy.conf  audio_policy_configuration.xml  mixer_paths.xml
audio/acdb/: MTP_Bluetooth_cal.acdb  MTP_General_cal.acdb  MTP_Global_cal.acdb  MTP_Handset_cal.acdb  MTP_Hdmi_cal.acdb  MTP_Headset_cal.acdb  MTP_Speaker_cal.acdb  workspaceFile.qwsp
bluetooth/: bdroid_buildcfg.h
camera/: Android.mk  CameraWrapper.cpp
configs/: libnfc-brcm.conf  libnfc-nci.conf  libnfc-nxp.conf  media_codecs.xml  media_codecs_performance.xml  media_profiles.xml  media_profiles_V1_0.xml  sec_config  synaptics-rmi-ts.kl  thermal-engine.conf
dataservices/: Android.mk  Makefile.am  configure.ac  data-oss.pc.in
dataservices/datatop/: autogen.sh  configure.ac
dataservices/datatop/src/: Android.mk  Makefile.am  datatop.c  datatop_cpu_stats_poll.c  datatop_dev_poll.c  datatop_dual_line_poll.c  datatop_fileops.c  datatop_fileops.h  datatop_gen_poll.c  datatop_gen_poll.h  datatop_helpers.c  datatop_interface.h  datatop_linked_list.c  datatop_linked_list.h  datatop_meminfo_file_poll.c  datatop_opt.c  datatop_opt.h  datatop_polling.h  datatop_single_line_poll.c  datatop_stat_poll.c  datatop_str.c  datatop_str.h  datatop_sys_snap.c  datatop_value_only_poll.c
dataservices/rmnetctl/cli/: Android.mk  Makefile.am  rmnetcli.c  rmnetcli.h
dataservices/rmnetctl/inc/: librmnetctl.h  librmnetctl_hndl.h
dataservices/rmnetctl/src/: Android.mk  Makefile.am  librmnetctl.c
dataservices/sockev/src/: Android.mk  sockev_cli.c
doze/: Android.mk  AndroidManifest.xml  proguard.flags
doze/res/drawable/: ic_settings_doze.xml  switchbar_background.xml
doze/res/layout/: doze.xml
doze/res/values-af/: strings.xml
doze/res/values-be/: strings.xml
doze/res/values-bg/: strings.xml
doze/res/values-ca/: strings.xml
doze/res/values-cs/: strings.xml
doze/res/values-da/: strings.xml
doze/res/values-de/: strings.xml
doze/res/values-el/: strings.xml
doze/res/values-eu-rES/: strings.xml
doze/res/values-fi/: strings.xml
doze/res/values-fr/: strings.xml
doze/res/values-gl-rES/: strings.xml
doze/res/values-hr/: strings.xml
doze/res/values-hu/: strings.xml
doze/res/values-it/: strings.xml
doze/res/values-iw/: strings.xml
doze/res/values-ja/: strings.xml
doze/res/values-nb/: strings.xml
doze/res/values-nl/: strings.xml
doze/res/values-pl/: strings.xml
doze/res/values-pt-rBR/: strings.xml
doze/res/values-pt-rPT/: strings.xml
doze/res/values-ro/: strings.xml
doze/res/values-ru/: strings.xml
doze/res/values-sl/: strings.xml
doze/res/values-sr/: strings.xml
gps/: Android.mk  flp.conf  gps.conf  izat.conf  lowi.conf  quipc.conf  sap.conf  xtwifi.conf
gps/core/: Android.mk  ContextBase.cpp  ContextBase.h  LBSProxyBase.h  LocAdapterBase.cpp  LocAdapterBase.h  LocAdapterProxyBase.h  LocApiBase.cpp  LocApiBase.h  LocDualContext.cpp  LocDualContext.h  MsgTask.cpp  MsgTask.h  UlpProxyBase.h  fused_location_extended.h  gps_extended.h  gps_extended_c.h  loc_core_log.cpp  loc_core_log.h
gps/libloc_api_50001/: Android.mk  LocEngAdapter.cpp  LocEngAdapter.h  Makefile.am  gps.c  loc.cpp  loc.h  loc_eng.cpp  loc_eng.h  loc_eng_agps.cpp  loc_eng_agps.h  loc_eng_dmn_conn.h  loc_eng_dmn_conn_handler.cpp  loc_eng_dmn_conn_thread_helper.c  loc_eng_log.h  loc_eng_msg.h  loc_eng_ni.cpp  loc_eng_nmea.cpp  loc_eng_nmea.h  loc_eng_xtra.cpp  loc_eng_xtra.h
gps/loc_api/: Android.mk
gps/loc_api/loc_api_v02/: Android.mk  LocApiV02.cpp  LocApiV02.h  Makefile.am  loc_api_sync_req.c  loc_api_sync_req.h  loc_api_v02_client.c  loc_api_v02_client.h  loc_api_v02_log.c  loc_api_v02_log.h  loc_util_log.h  location_service_v02.c  location_service_v02.h
gps/platform_lib_abstractions/: elapsed_millis_since_boot.cpp  platform_lib_time.h
gps/utils/: Android.mk  LocHeap.cpp  LocHeap.h  LocSharedLock.h  LocThread.cpp  LocThread.h  LocTimer.cpp  LocTimer.h  Makefile.am  MsgTask.cpp  MsgTask.h  linked_list.c  linked_list.cpp  loc_cfg.cpp  loc_cfg.h  loc_log.cpp  loc_log.h  loc_misc_utils.cpp  loc_misc_utils.h  loc_target.cpp  loc_target.h  loc_timer.c  loc_timer.h  log_util.h  msg_q.c  msg_q.cpp  msg_q.h
gps/utils/platform_lib_abstractions/: platform_lib_includes.h  platform_lib_macros.h
include/: device_perms.h
include/camera/: CameraParametersExtra.h
init/: Android.bp  Android.mk  init_bacon.cpp  init_msm8974.h
keys/: color-releasekey.x509.pem
liblight/: Android.mk  lights.c
libshims/: Android.mk  camera_shim.cpp  cameraclient_shim.cpp  cameraclient_shim.h  wvm_shim.cpp
power/: Android.mk  power-feature.c
rootdir/: Android.mk
rootdir/etc/: fstab-verity.bacon  fstab.bacon  init.bacon-verity.rc  init.bacon.rc  init.cne.rc  init.qcom-common.rc  init.qcom.bt.sh  init.qcom.power.rc  init.qcom.rc  init.qcom.ssr.rc  init.qcom.usb.rc  recovery.fstab  ueventd.qcom.rc
seccomp/: mediacodec.policy  mediaextractor.policy
sepolicy/: bootanim.te  camera.te  cameraserver.te  device.te  file.te  file_contexts  fsck.te  genfs_contexts  hal_nfc_default.te  healthd.te  hwservice.te  hwservice_contexts  init_shell.te  location.te  mediaserver.te  perfprofd.te  property.te  property_contexts  rmt_storage.te  shell.te  system_app.te  system_server.te  tee.te  ueventd.te  vold.te  wcnss_service.te
usb/: Android.bp  Usb.cpp  Usb.h  android.hardware.usb@1.0-service.bacon.rc  service.cpp
voice_processing/: Android.mk  voice_processing_descriptors.c
wifi/: Android.mk  WCNSS_qcom_cfg.ini  hostapd.conf  p2p_supplicant_overlay.conf  wpa_supplicant_overlay.conf
(+50 files in other folders)
